fixed stretched screen bug, added inView to first page

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ a {
 }
 
 .pretty-scrollbar::-webkit-scrollbar-thumb {
-  background: #6542f1;
+  background: #af9afb;
   border-radius: 8px;
 }
 
